--- a/Fenix/index.html
+++ b/Fenix/index.html
@@ -15,8 +15,8 @@
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg sticky-top px-5 pt-0" id="nav-fenix">
-    <a class="navbar-brand px-3 pt-5 pb-2 m-0 bg-light sombra mt-n5" href="#" >
+  <nav class="navbar navbar-expand-lg sticky-top px-4 pt-0" id="nav-fenix">
+    <a class="navbar-brand px-3 pt-5 pb-2 m-0 bg-light sombra mt-n5" href="#">
       <img src="./img/logo-fenix.png" class="img-fluid" alt="">
     </a>
     <button class="navbar-toggler mx-auto" type="button" data-toggle="collapse" data-target="#navbar"
@@ -24,10 +24,11 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse flex-column ml-lg-0 ml-3 px-3 bg-transparent" id="navbar">
-      <ul class="navbar-nav flex-row pl-2 mb-4 mr-auto">
+    <div class="collapse navbar-collapse flex-column ml-lg-0 px-2 bg-transparent" id="navbar">
+      <ul class="navbar-nav flex-row pl-2 mb-3 mr-auto">
         <li class="nav-item">
-          <a class="nav-link px-1" href="#"><i class="fab fa-instagram-square text-success fa-2x"></i></a>
+          <a class="nav-link px-1" href="https://www.instagram.com/farmacianuevasocial/" target="_blank"><i
+              class="fab fa-instagram-square text-success fa-2x"></i></a>
         </li>
         <li class="nav-item">
           <a class="nav-link px-1" href="#"><i class="fab fa-facebook-square text-success fa-2x"></i></a>
@@ -73,9 +74,9 @@
   <!-- carrusel -->
   <div id="carrusel">
     <div class="carru">
-      <div><img src="./img/img-1.jpg" alt=""></div>
+      <div><img src="./img/carrusel-principal/img-1.jpg" alt=""></div>
       <div>
-        <img src="./img/img-2.jpg" alt="">
+        <img src="./img/carrusel-principal/img-2.jpg" alt="">
         <div class="card card-carrusel">
           <h3 class="btn btn-gris">#QuedateEnCasa</h3>
           <h1 class="font-weight-bolder">ENVÍOS A DOMICILIO
@@ -87,7 +88,7 @@
         </div>
       </div>
       <div>
-        <img src="./img/img-3.jpg" alt="">
+        <img src="./img/carrusel-principal/img-3.jpg" alt="">
         <div class="card card-carrusel">
           <h3 class="btn btn-gris">#QuedateEnCasa</h3>
           <h1 class="font-weight-bolder">SHOP ONLINE</h1>
@@ -261,7 +262,7 @@
   <!-- covid-19 -->
   <section id="covid">
     <div class="row">
-      <div class=" col-6 px-5">
+      <div class=" col-6 p-5">
         <h3 class="btn btn-gris btn-lg">COVID-19</h3>
         <h1>Tips para cuidarnos</h1>
         <p class="font-weight-bolder my-4">¡En Nueva Social Fénix nos cuidamos entre todos!</p>
@@ -272,12 +273,58 @@
           superficies contaminadas
         </p>
         <h2>Cuidados</h2>
-
       </div>
       <div class="col-6">
-        
+        <img src="./img/covid/covid.png" alt="imagen salir de casa con tapabocas" class="img-tapabocas">
       </div>
-        
+      <div class="container-fluid">
+        <div class="row justify-content-center text-center px-5">
+          <div class="col-2">
+            <img src="./img/covid/covid-1.png" alt="imagen covid" class="img-fluid img-covid">
+            <p class="font-weight-light px-4">Lavarse las manos con jabón regularmente.</p>
+          </div>
+          <div class="col-2">
+            <img src="./img/covid/covid-2.png" alt="imagen covid" class="img-fluid img-covid">
+            <p class="font-weight-light px-4">Estornudar en el pliegue del codo.</p>
+          </div>
+          <div class="col-2">
+            <img src="./img/covid/covid-3.png" alt="imagen covid" class="img-fluid img-covid">
+            <p class="font-weight-light px-4">No lavarse las manos a los ojos y la nariz.</p>
+          </div>
+          <div class="col-2">
+            <img src="./img/covid/covid-4.png" alt="imagen covid" class="img-fluid img-covid">
+            <p class="font-weight-light px-4">Ventilar los ambientes.</p>
+          </div>
+          <div class="col-2">
+            <img src="./img/covid/covid-5.png" alt="imagen covid" class="img-fluid img-covid">
+            <p class="font-weight-light px-4">Desinfectar los objetos que se usan con frecuencia.</p>
+          </div>
+        </div>
+        <div class="row border-covid justify-content-center text-center mt-4">
+          <div class="col-3">
+            <img src="./img/covid/covid-6.png" alt="imagen covid" class="img-fluid img-covid2">
+            <p class="font-weight-light px-4">Fiebre y tos.</p>
+          </div>
+          <div class="col-3">
+            <img src="./img/covid/covid-7.png" alt="imagen covid" class="img-fluid img-covid2">
+            <p class="font-weight-light px-4">Fiebre y dolor de garganta.</p>
+          </div>
+          <div class="col-3">
+            <img src="./img/covid/covid-8.png" alt="imagen covid" class="img-fluid img-covid2">
+            <p class="font-weight-light px-4">Fiebre y dificultad para respirar.</p>
+          </div>
+        </div>
+      </div>
+      <div class="row justify-content-center mt-4 px-5">
+        <div class="col-7">
+          <h5 class="mt-5">Si tenés alguno de estos síntomas o en contacto con
+            algún caso confirmado <b>no te automediques y consultá
+              inmediatamente al sistema de salud.</b></h5>
+        </div>
+        <div class="col-5">
+          <img src="./img/covid/ministerio.jpg" alt="ministerio de salud" class="img-fluid float-right w-50 mt-4">
+        </div>
+      </div>
     </div>
   </section>
   <!-- /covid-19 -->
@@ -366,16 +413,16 @@
   <!-- /conocenos -->
   <!-- contactanos -->
   <section id="contactanos" class="bg-secondary">
-    <div class="row">
+    <div class="row pl-5">
       <div class="col-12 col-lg-6">
         <h3 class="text-light mb-4">CONTACTANOS</h3>
-        <form action="" method="POST">
+        <form action="" method="GET" id="form-contacto">
           <div class="form-group mb-4">
             <input type="text" class="form-control sombra col-7" name="nombre" id="nombre"
               placeholder="Nombre y Apellido">
           </div>
           <div class="form-group mb-4">
-            <input type="email" class="form-control sombra" id="mail" placeholder="name@example.com">
+            <input type="email" class="form-control sombra" id="email" placeholder="E-mail">
           </div>
           <div class="form-group mb-4">
             <input type="text" class="form-control sombra" name="asunto" id="asunto" placeholder="Asunto">
@@ -383,7 +430,7 @@
           <div class="form-group mb-4">
             <textarea class="form-control sombra" id="mensaje" rows="7" placeholder="Mensaje"></textarea>
             <button class="float-right btn btn-light text-primary mt-n1 border-0 font-weight-bolder sombra"
-              type="submit">ENVIAR</button>
+              type="submit" id="submit">ENVIAR</button>
           </div>
         </form>
       </div>
@@ -421,21 +468,23 @@
     <section id="footer" class="bg-secondary pb-4" style="position: relative;">
       <div class="row p-0">
         <div class="col-4">
-          <div class="label label-2 bg-light p-0">
-            <img src="./img/logo-fenix.png" class="img-fluid p-0" alt="">
+          <div class="label label-2 bg-light p-3">
+            <img src="./img/logo-fenix.png" class="img-fluid" alt="">
           </div>
         </div>
         <div class="row col-8 mt-n5 p-0">
           <div class="col-3">
             <ul class="p-0">
               <li class="nav-item">
-                <a class="nav-link p-1 text-light" href="#productos"><i class="fa fa-square fa-xs pr-1"></i> PRODUCTOS <span class="sr-only">(current)</span></a>
+                <a class="nav-link p-1 text-light" href="#productos"><i class="fa fa-square fa-xs pr-1"></i> PRODUCTOS
+                  <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link p-1 text-light" href="#envios"><i class="fa fa-square fa-xs pr-1"></i> ENVÍOS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link p-1 text-light" href="#promociones"><i class="fa fa-square fa-xs pr-1"></i> PROMOCIONES</a>
+                <a class="nav-link p-1 text-light" href="#promociones"><i class="fa fa-square fa-xs pr-1"></i>
+                  PROMOCIONES</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link p-1 text-light" href="#covid"><i class="fa fa-square fa-xs pr-1"></i> COVID-19</a>
@@ -445,16 +494,20 @@
           <div class="col-3">
             <ul class="p-0">
               <li class="nav-item">
-                <a class="nav-link p-1 text-light" href="#sucursales"><i class="fa fa-square fa-xs pr-1"></i> SUCURSALES</a>
+                <a class="nav-link p-1 text-light" href="#sucursales"><i class="fa fa-square fa-xs pr-1"></i>
+                  SUCURSALES</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link p-1 text-light" href="#conocenos"><i class="fa fa-square fa-xs pr-1"></i> CONOCENOS</a>
+                <a class="nav-link p-1 text-light" href="#conocenos"><i class="fa fa-square fa-xs pr-1"></i>
+                  CONOCENOS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link p-1 text-light" href="#contactanos"><i class="fa fa-square fa-xs pr-1"></i> CONTACTO</a>
+                <a class="nav-link p-1 text-light" href="#contactanos"><i class="fa fa-square fa-xs pr-1"></i>
+                  CONTACTO</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link p-1 text-light" href="#ubicacion"><i class="fa fa-square fa-xs pr-1"></i> UBICACIÓN</a>
+                <a class="nav-link p-1 text-light" href="#ubicacion"><i class="fa fa-square fa-xs pr-1"></i>
+                  UBICACIÓN</a>
               </li>
             </ul>
           </div>
@@ -469,14 +522,15 @@
             </p>
             <p class="text-light font-weight-light mb-0">
               <span class="font-weight-bold">Griveo</span> / Gral. José Gervasio Artigas 4901
-            <br>
+              <br>
               0800-666-5678
             </p>
           </div>
         </div>
       </div>
       <div class="px-5">
-        <a href="#"><i class="fab fa-instagram-square text-light fa-2x"></i></a>
+        <a href="https://www.instagram.com/farmacianuevasocial/" target="_blank"><i
+            class="fab fa-instagram-square text-light fa-2x"></i></a>
         <a href="#"><i class="fab fa-facebook-square text-light fa-2x"></i></a>
         <p class="text-white font-weight-light d-inline-block pl-1" style="font-size: 13px; line-height: normal;">
           SEGUINOS EN
@@ -484,8 +538,9 @@
           NUESTRAS REDES
         </p>
         <p class="text-light font-weight-light">
-          © Copyright 2019. Todos los derechos reservados | Profasan sociedad anonima, Cuit 30708995904. Dirección fiscal Artigas 4901, CABA
-          <a href="#">
+          © Copyright 2019. Todos los derechos reservados | Profasan sociedad anonima, Cuit 30708995904. Dirección
+          fiscal Artigas 4901, CABA
+          <a href="#" class="float-right">
             <img src="./img/data-fiscal.jpg" alt="data fiscal" class="dataf">
           </a>
         </p>
@@ -503,7 +558,7 @@
   </script>
   <script src="./js/slick.min.js"></script>
   <script src="./js/main.js"></script>
-  
+
 </body>
 
 </html>
