--- a/Fenix/index.html
+++ b/Fenix/index.html
@@ -33,6 +33,9 @@
         <li class="nav-item">
           <a class="nav-link px-1" href="#"><i class="fab fa-facebook-square text-success fa-2x"></i></a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link px-1" href="#"><i class="fab fa-whatsapp-square text-success fa-2x"></i></a>
+        </li>
       </ul>
       <ul class="navbar-nav w-100 nav-fill mt-lg-0 mb-4">
         <li class="nav-item">
@@ -67,7 +70,6 @@
         <br>
         <i class="fa fa-shopping-cart fa-3x text-light mt-0"></i>
       </a>
-    </div>
     </div>
   </nav>
   <!-- /Navbar -->
@@ -106,25 +108,137 @@
     <div class="label bg-farma">
       <h2 class="text-white text-center font-weight-bolder">PRODUCTOS</h2>
     </div>
-    <div class="row container mx-auto my-5">
-      <div class="col">
-        <div class="card card-productos sombra">
-          <img src="./img/delivery.png" class="img-fluid p-4" alt="">
+    <div class="m-5 carru-prod">
+      <div class="card border-0 m-4">
+        <div class="card-productos sombra">
+          <img src="./img/productos/prod-1.png" class="img-fluid p-4" alt="producto 1">
+        </div>
+        <div hidden>
+          <h2>Producto</h2>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+          <h2 class="font-weight-bolder text-right">$ 157,50</h2>
+          <a href="#" class="btn btn-block btn-primary">Agregar al Carrito</a>
         </div>
       </div>
-      <div class="col">
-        <div class="card card-productos sombra">
-          <img src="./img/delivery.png" class="img-fluid p-4" alt="">
+      <div class="card border-0 m-4">
+        <div class="card-productos sombra">
+          <img src="./img/productos/prod-2.png" class="img-fluid p-4" alt="producto 2">
+        </div>
+        <div hidden>
+          <h2>Producto</h2>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+          <h2 class="font-weight-bolder text-right">$ 250,50</h2>
+          <a href="#" class="btn btn-block btn-primary">Agregar al Carrito</a>
         </div>
       </div>
-      <div class="col">
-        <div class="card card-productos sombra">
-          <img src="./img/delivery.png" class="img-fluid p-4" alt="">
+      <div class="card border-0 m-4">
+        <div class="card-productos sombra">
+          <img src="./img/productos/prod-3.png" class="img-fluid p-4" alt="producto 3">
+        </div>
+        <div hidden>
+          <h2>Producto</h2>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+          <h2 class="font-weight-bolder text-right">$ 157,50</h2>
+          <a href="#" class="btn btn-block btn-primary">Agregar al Carrito</a>
         </div>
       </div>
-      <div class="col">
-        <div class="card card-productos sombra">
-          <img src="./img/delivery.png" class="img-fluid p-4" alt="">
+      <div class="card border-0 m-4">
+        <div class="card-productos sombra">
+          <img src="./img/productos/prod-4.png" class="img-fluid p-4" alt="producto 4">
+        </div>
+        <div hidden>
+          <h2>Producto</h2>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+          <h2 class="font-weight-bolder text-right">$ 250,50</h2>
+          <a href="#" class="btn btn-block btn-primary">Agregar al Carrito</a>
+        </div>
+      </div>
+      <div class="card border-0 m-4">
+        <div class="card-productos sombra">
+          <img src="./img/productos/prod-5.png" class="img-fluid p-4" alt="producto 5">
+        </div>
+        <div hidden>
+          <h2>Producto</h2>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+          <h2 class="font-weight-bolder text-right">$ 157,50</h2>
+          <a href="#" class="btn btn-block btn-primary">Agregar al Carrito</a>
+        </div>
+      </div>
+      <div class="card border-0 m-4">
+        <div class="card-productos sombra">
+          <img src="./img/productos/prod-6.png" class="img-fluid p-4" alt="producto 6">
+        </div>
+        <div hidden>
+          <h2>Producto</h2>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+          <h2 class="font-weight-bolder text-right">$ 250,50</h2>
+          <a href="#" class="btn btn-block btn-primary">Agregar al Carrito</a>
+        </div>
+      </div>
+      <div class="card border-0 m-4">
+        <div class="card-productos sombra">
+          <img src="./img/productos/prod-7.png" class="img-fluid p-4" alt="producto 7">
+        </div>
+        <div hidden>
+          <h2>Producto</h2>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+          <h2 class="font-weight-bolder text-right">$ 157,50</h2>
+          <a href="#" class="btn btn-block btn-primary">Agregar al Carrito</a>
+        </div>
+      </div>
+      <div class="card border-0 m-4">
+        <div class="card-productos sombra">
+          <img src="./img/productos/prod-8.png" class="img-fluid p-4" alt="producto 8">
+        </div>
+        <div hidden>
+          <h2>Producto</h2>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+          <h2 class="font-weight-bolder text-right">$ 250,50</h2>
+          <a href="#" class="btn btn-block btn-primary">Agregar al Carrito</a>
+        </div>
+      </div>        
+      <div class="card border-0 m-4">
+        <div class="card-productos sombra">
+          <img src="./img/productos/prod-9.png" class="img-fluid p-4" alt="producto 9">
+        </div>
+        <div hidden>
+          <h2>Producto</h2>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+          <h2 class="font-weight-bolder text-right">$ 157,50</h2>
+          <a href="#" class="btn btn-block btn-primary">Agregar al Carrito</a>
+        </div>
+      </div>
+      <div class="card border-0 m-4">
+        <div class="card-productos sombra">
+          <img src="./img/productos/prod-10.png" class="img-fluid p-4" alt="producto 10">
+        </div>
+        <div hidden>
+          <h2>Producto</h2>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+          <h2 class="font-weight-bolder text-right">$ 250,50</h2>
+          <a href="#" class="btn btn-block btn-primary">Agregar al Carrito</a>
+        </div>
+      </div>
+      <div class="card border-0 m-4">
+        <div class="card-productos sombra">
+          <img src="./img/productos/prod-11.png" class="img-fluid p-4" alt="producto 11">
+        </div>
+        <div hidden>
+          <h2>Producto</h2>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+          <h2 class="font-weight-bolder text-right">$ 157,50</h2>
+          <a href="#" class="btn btn-block btn-primary">Agregar al Carrito</a>
+        </div>
+      </div>
+      <div class="card border-0 m-4">
+        <div class="card-productos sombra">
+          <img src="./img/productos/prod-12.png" class="img-fluid p-4" alt="producto 12">
+        </div>
+        <div hidden>
+          <h2>Producto</h2>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+          <h2 class="font-weight-bolder text-right">$ 250,50</h2>
+          <a href="#" class="btn btn-block btn-primary">Agregar al Carrito</a>
         </div>
       </div>
     </div>
@@ -179,27 +293,65 @@
         <h2 class="font-weight-bolder text-light">PROMOCIONES DEL MES</h2>
       </div>
     </div>
-    <h5>¡LOS MEJORES PRODUCTOS SOLO PARA VOS!</h5>
-    <p>Ver todos los productos</p>
-    <div class="row container mx-auto my-5">
+    <div class="container">
+      <h4 class="font-weight-bolder">¡LOS MEJORES PRODUCTOS SOLO PARA VOS!</h4>
+      <h5><a href="#" class="text-primary">Ver todos los productos <i class="fa fa-long-arrow-alt-right pl-1"></i></a></h5>
+    </div>
+    <div class="row m-5">
       <div class="col">
-        <div class="card card-productos sombra">
-          <img src="https://via.placeholder.com/150/4B860A/FFFFFF?text=MARCA" class="img-fluid p-4" alt="">
+        <div class="card border-0 m-4">
+          <div class="card-productos sombra">
+            <img src="./img/productos/prod-1.png" class="img-fluid p-4" alt="producto 1">
+            <a href="#" class="btn btn-danger btn-lg font-weight-bolder btn-oferta">-30%</a>
+          </div>
+          <div hidden>
+            <h2>Producto</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+            <h2 class="font-weight-bolder text-right">$ 157,50</h2>
+            <a href="#" class="btn btn-block btn-primary">Agregar al Carrito</a>
+          </div>
         </div>
       </div>
       <div class="col">
-        <div class="card card-productos sombra">
-          <img src="https://via.placeholder.com/150/4B860A/FFFFFF?text=MARCA" class="img-fluid p-4" alt="">
+        <div class="card border-0 m-4">
+          <div class="card-productos sombra">
+            <img src="./img/productos/prod-1.png" class="img-fluid p-4" alt="producto 1">
+            <a href="#" class="btn btn-danger btn-lg font-weight-bolder btn-oferta">-30%</a>
+          </div>
+          <div hidden>
+            <h2>Producto</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+            <h2 class="font-weight-bolder text-right">$ 157,50</h2>
+            <a href="#" class="btn btn-block btn-primary">Agregar al Carrito</a>
+          </div>
         </div>
       </div>
       <div class="col">
-        <div class="card card-productos sombra">
-          <img src="https://via.placeholder.com/150/4B860A/FFFFFF?text=MARCA" class="img-fluid p-4" alt="">
+        <div class="card border-0 m-4">
+          <div class="card-productos sombra">
+            <img src="./img/productos/prod-1.png" class="img-fluid p-4" alt="producto 1">
+            <a href="#" class="btn btn-danger btn-lg font-weight-bolder btn-oferta">-30%</a>
+          </div>
+          <div hidden>
+            <h2>Producto</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+            <h2 class="font-weight-bolder text-right">$ 157,50</h2>
+            <a href="#" class="btn btn-block btn-primary">Agregar al Carrito</a>
+          </div>
         </div>
       </div>
       <div class="col">
-        <div class="card card-productos sombra">
-          <img src="https://via.placeholder.com/150/4B860A/FFFFFF?text=MARCA" class="img-fluid p-4" alt="">
+        <div class="card border-0 m-4">
+          <div class="card-productos sombra">
+            <img src="./img/productos/prod-1.png" class="img-fluid p-4" alt="producto 1">
+            <a href="#" class="btn btn-danger btn-lg font-weight-bolder btn-oferta">-30%</a>
+          </div>
+          <div hidden>
+            <h2>Producto</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+            <h2 class="font-weight-bolder text-right">$ 157,50</h2>
+            <a href="#" class="btn btn-block btn-primary">Agregar al Carrito</a>
+          </div>
         </div>
       </div>
     </div>
